--- a/src/view/BanAnManager.fxml
+++ b/src/view/BanAnManager.fxml
@@ -2,110 +2,187 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane layoutX="0.0" prefHeight="696.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BanAnManagerController">
-	<children>
-		<Pane prefHeight="215.0" prefWidth="973.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-			<children>
-				<ImageView fx:id="imvHinhAnhBA" fitHeight="165.0" fitWidth="200.0" layoutX="30.0" layoutY="33.0" onMouseClicked="#chooseImage" pickOnBounds="true" preserveRatio="true">
-					<image>
-						<Image url="@../images/table-view.png" />
-					</image>
-				</ImageView>
-				<Label layoutX="265.0" layoutY="41.0" prefHeight="23.0" prefWidth="118.0" text="Ký số bàn ăn:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<Label layoutX="265.0" layoutY="88.0" prefHeight="27.0" prefWidth="133.0" text="Số lượng ghế:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<Label layoutX="265.0" layoutY="129.0" prefHeight="27.0" prefWidth="108.0" text="Mô tả:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<TextField fx:id="txtKySoBanAn" layoutX="385.0" layoutY="30.0" prefHeight="39.0" prefWidth="555.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextField>
-				<TextField fx:id="txtSoLuongGheBA" layoutX="385.0" layoutY="79.0" prefHeight="39.0" prefWidth="84.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextField>
-				<TextField fx:id="txtGiaTienBA" layoutX="592.0" layoutY="78.0" prefHeight="39.0" prefWidth="143.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextField>
-				<Label layoutX="515.0" layoutY="89.0" prefHeight="27.0" prefWidth="75.0" text="Giá tiền:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<TextArea fx:id="txtMoTaBA" layoutX="334.0" layoutY="129.0" prefHeight="77.0" prefWidth="606.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextArea>
-			</children>
-		</Pane>
-      <ScrollPane fitToWidth="true" layoutY="280.0" prefHeight="417.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="279.0">
-         <content>
-            <FlowPane fx:id="dsBanAn" alignment="TOP_CENTER" hgap="10.0" prefHeight="415.0" prefWidth="971.0" vgap="20.0">
-               <padding>
-                  <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
-               </padding>
-            </FlowPane>
-         </content>
-      </ScrollPane>
-				<HBox alignment="CENTER_LEFT" layoutY="215.0" prefHeight="64.0" prefWidth="973.0" spacing="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-					<children>
-						<FontAwesomeIconView fill="#473159" glyphName="SEARCH" size="23">
-							<HBox.margin>
-								<Insets left="10.0" />
-							</HBox.margin>
-						</FontAwesomeIconView>
-						<TextField prefHeight="39.0" prefWidth="418.0" style="-fx-border-color: #3156DD;">
-							<font>
-								<Font size="18.0" />
-							</font>
-						</TextField>
-						<ComboBox prefHeight="39.0" prefWidth="195.0" style="-fx-background-color: #ffffff; -fx-border-color: #3156DD;" />
-						<Button fx:id="btnThemBanAn" mnemonicParsing="false" onAction="#themBanAn" prefHeight="39.0" prefWidth="213.0" style="-fx-background-color: #3F2B63;" text="Thêm bàn ăn" textFill="WHITE">
-							<font>
-								<Font size="18.0" />
-							</font>
-							<graphic>
-								<FontAwesomeIconView fill="#f8f8f8" glyphName="PLUS" size="23" />
-							</graphic>
-						</Button>
-						<Button fx:id="btnSuaBanAn" mnemonicParsing="false" onAction="#suaBanAn" prefHeight="39.0" prefWidth="213.0" style="-fx-background-color: #3F2B63;" text="Sửa bàn ăn" textFill="WHITE">
-		                     <font>
-		                        <Font size="18.0" />
-		                     </font>
-		                     <graphic>
-		                        <FontAwesomeIconView fill="#f8f8f8" glyphName="WRENCH" size="23" />
-		                     </graphic>
-		                  </Button>
-					</children>
-				</HBox>
-	</children>
+<AnchorPane layoutX="0.0" prefHeight="718.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BanAnManagerController">
+    <children>
+      <SplitPane dividerPositions="0.25440313111545987" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane maxWidth="512.0" minWidth="256.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #7156DD;">
+               <children>
+                  <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <tabs>
+                      <Tab closable="false" text="Thêm &amp; sửa">
+                        <content>
+                          <AnchorPane>
+                                 <children>
+                                    <TilePane alignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                       <children>
+                                            <Pane prefHeight="210.0" prefWidth="256.0" style="-fx-background-color: #7156DD;">
+                                                <children>
+                                                    <ImageView fx:id="imvHinhAnhBA" fitHeight="165.0" fitWidth="200.0" layoutX="28.0" layoutY="25.0" onMouseClicked="#chooseImage" pickOnBounds="true" preserveRatio="true">
+                                                        <image>
+                                                            <Image url="@../images/table-view.png" />
+                                                        </image>
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                    </ImageView>
+                                                </children>
+                                            </Pane>
+                                       </children>
+                                    </TilePane>
+                                        <Label layoutX="16.0" layoutY="209.0" prefHeight="23.0" prefWidth="118.0" text="Ký số bàn ăn:" textFill="WHITE">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </Label>
+                                        <TextField fx:id="txtKySoBanAn" layoutX="15.0" layoutY="240.0" prefHeight="39.0" prefWidth="266.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="20.0">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </TextField>
+                                        <Label layoutX="17.0" layoutY="300.0" prefHeight="27.0" prefWidth="108.0" text="Mô tả:" textFill="WHITE">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </Label>
+                                        <TextArea fx:id="txtMoTaBA" layoutX="15.0" layoutY="329.0" prefHeight="108.0" prefWidth="267.0" wrapText="true" AnchorPane.bottomAnchor="240.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="19.0" AnchorPane.topAnchor="329.0">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </TextArea>
+                                        <Label layoutX="18.0" layoutY="472.0" prefHeight="27.0" prefWidth="125.0" text="Số lượng ghế:" textFill="WHITE" AnchorPane.bottomAnchor="178.0">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </Label>
+                                        <TextField fx:id="txtSoLuongGheBA" layoutX="152.0" layoutY="456.0" prefHeight="39.0" prefWidth="85.0" AnchorPane.bottomAnchor="182.0">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </TextField>
+                                        <Label layoutX="19.0" layoutY="530.0" prefHeight="27.0" prefWidth="75.0" text="Phụ giá:" textFill="WHITE" AnchorPane.bottomAnchor="120.0">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </Label>
+                                        <TextField fx:id="txtGiaTienBA" layoutX="104.0" layoutY="520.0" prefHeight="39.0" prefWidth="127.0" AnchorPane.bottomAnchor="118.0">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </TextField>
+                                    <TilePane alignment="CENTER" hgap="20.0" layoutX="35.0" layoutY="587.0" prefHeight="39.0" prefWidth="210.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                       <children>
+                                                    <Button fx:id="btnThemBanAn" mnemonicParsing="false" onAction="#themBanAn" prefHeight="39.0" prefWidth="97.0" style="-fx-background-color: #3F2B63;" text="Thêm" textFill="WHITE">
+                                                        <font>
+                                                            <Font size="18.0" />
+                                                        </font>
+                                                        <graphic>
+                                                            <FontAwesomeIconView fill="#f8f8f8" glyphName="PLUS" size="23" />
+                                                        </graphic>
+                                                    </Button>
+                                                    <Button fx:id="btnSuaBanAn" mnemonicParsing="false" onAction="#suaBanAn" prefHeight="39.0" prefWidth="96.0" style="-fx-background-color: #3F2B63;" text="Sửa" textFill="WHITE">
+                                                         <font>
+                                                            <Font size="18.0" />
+                                                         </font>
+                                                         <graphic>
+                                                            <FontAwesomeIconView fill="#f8f8f8" glyphName="WRENCH" size="23" />
+                                                         </graphic>
+                                                      </Button>
+                                       </children>
+                                    </TilePane>
+                                 </children>
+                              </AnchorPane>
+                        </content>
+                      </Tab>
+                      <Tab closable="false" text="Tìm kiếm">
+                        <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                                <TextField layoutX="20.0" layoutY="73.0" prefHeight="41.0" prefWidth="267.0" style="-fx-border-color: #3156DD;" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="15.0">
+                                                    <font>
+                                                        <Font size="18.0" />
+                                                    </font>
+                                                </TextField>
+                                    <TilePane alignment="CENTER" layoutX="90.0" layoutY="425.0" prefHeight="39.0" prefWidth="179.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                       <children>
+                                          <Button mnemonicParsing="false" style="-fx-background-color: #3F2B63;" text="Tìm kiếm" textFill="WHITE">
+                                             <graphic>
+                                                            <FontAwesomeIconView fill="WHITE" glyphName="SEARCH" size="23" />
+                                             </graphic>
+                                             <font>
+                                                <Font size="18.0" />
+                                             </font>
+                                          </Button>
+                                       </children>
+                                    </TilePane>
+                                    <Label layoutX="20.0" layoutY="38.0" text="Ký số:" textFill="WHITE">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="20.0" layoutY="138.0" text="Mô tả:" textFill="WHITE">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="22.0" layoutY="295.0" text="Số ghế:" textFill="WHITE">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                    </Label>
+                                    <CheckBox layoutX="22.0" layoutY="355.0" mnemonicParsing="false" text="Có thể đặt" textFill="WHITE">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                    </CheckBox>
+                                    <TextArea layoutX="20.0" layoutY="173.0" prefHeight="91.0" prefWidth="267.0" wrapText="true" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="15.0">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font></TextArea>
+                                    <TextField layoutX="103.0" layoutY="287.0" prefHeight="43.0" prefWidth="86.0">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font></TextField>
+                                 </children>
+                              </AnchorPane>
+                        </content>
+                      </Tab>
+                    </tabs>
+                  </TabPane>
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <ScrollPane fitToWidth="true" prefHeight="417.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <content>
+                        <FlowPane fx:id="dsBanAn" alignment="TOP_CENTER" hgap="10.0" prefHeight="714.0" prefWidth="725.0" vgap="20.0">
+                           <padding>
+                              <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
+                           </padding>
+                        </FlowPane>
+                     </content>
+                  </ScrollPane>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
+    </children>
 </AnchorPane>
