--- a/src/view/MonAnManager.fxml
+++ b/src/view/MonAnManager.fxml
@@ -2,109 +2,187 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane layoutX="0.0" prefHeight="696.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MonAnManagerController">
-	<children>
-		<Pane prefHeight="215.0" prefWidth="973.0" style="-fx-background-color: #7156DD;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-			<children>
-				<ImageView fx:id="imvHinhAnhMA" fitHeight="165.0" fitWidth="200.0" layoutX="30.0" layoutY="33.0" onMouseClicked="#chooseImage" pickOnBounds="true" preserveRatio="true">
-					<image>
-						<Image url="@../images/food-view.png" />
-					</image>
-				</ImageView>
-				<Label layoutX="265.0" layoutY="41.0" prefHeight="23.0" prefWidth="118.0" text="Tên món ăn:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<Label layoutX="265.0" layoutY="88.0" prefHeight="27.0" prefWidth="133.0" text="Số lượng người:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<Label layoutX="267.0" layoutY="126.0" prefHeight="27.0" prefWidth="108.0" text="Mô tả:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<TextField fx:id="txtTenMonAn" layoutX="377.0" layoutY="30.0" prefHeight="39.0" prefWidth="563.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextField>
-				<TextField fx:id="txtSoLuongNguoiMA" layoutX="405.0" layoutY="79.0" prefHeight="39.0" prefWidth="64.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextField>
-				<TextField fx:id="txtGiaTienMA" layoutX="592.0" layoutY="78.0" prefHeight="39.0" prefWidth="143.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextField>
-				<Label layoutX="515.0" layoutY="89.0" prefHeight="27.0" prefWidth="75.0" text="Giá tiền:" textFill="WHITE">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</Label>
-				<TextArea fx:id="txtMoTaMA" layoutX="334.0" layoutY="129.0" prefHeight="77.0" prefWidth="606.0">
-					<font>
-						<Font size="18.0" />
-					</font>
-				</TextArea>
-			</children>
-		</Pane>
-				<HBox alignment="CENTER_LEFT" layoutY="212.0" prefHeight="84.0" prefWidth="973.0" spacing="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-					<children>
-						<FontAwesomeIconView fill="#473159" glyphName="SEARCH" size="23">
-							<HBox.margin>
-								<Insets left="10.0" />
-							</HBox.margin>
-						</FontAwesomeIconView>
-						<TextField prefHeight="39.0" prefWidth="418.0" style="-fx-border-color: #3156DD;">
-							<font>
-								<Font size="18.0" />
-							</font>
-						</TextField>
-						<ComboBox prefHeight="39.0" prefWidth="195.0" style="-fx-background-color: #ffffff; -fx-border-color: #3156DD;" />
-						<Button fx:id="btnThemMonAn" mnemonicParsing="false" onAction="#themMonAn" prefHeight="39.0" prefWidth="213.0" style="-fx-background-color: #3F2B63;" text="Thêm món ăn" textFill="WHITE">
-							<font>
-								<Font size="18.0" />
-							</font>
-							<graphic>
-								<FontAwesomeIconView fill="#f8f8f8" glyphName="PLUS" size="23" />
-							</graphic>
-						</Button>
-            <Button fx:id="btnSuaMonAn" mnemonicParsing="false" onAction="#suaMonAn" prefHeight="39.0" prefWidth="213.0" style="-fx-background-color: #3F2B63;" text="Sửa món ăn" textFill="WHITE">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <graphic>
-                  <FontAwesomeIconView fill="#f8f8f8" glyphName="WRENCH" size="23" />
-               </graphic>
-            </Button>
-					</children>
-				</HBox>
-      <ScrollPane fitToWidth="true" layoutY="296.0" prefHeight="400.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="296.0">
-         <content>
-            <FlowPane fx:id="dsMonAn" alignment="TOP_CENTER" hgap="10.0" prefHeight="457.0" prefWidth="973.0" vgap="10.0">
-               <padding>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-               </padding></FlowPane>
-         </content>
-      </ScrollPane>
-	</children>
+<AnchorPane layoutX="0.0" prefHeight="718.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MonAnManagerController">
+    <children>
+      <SplitPane dividerPositions="0.25440313111545987" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane maxWidth="512.0" minWidth="256.0" prefHeight="718.0" prefWidth="256.0">
+               <children>
+                  <TabPane prefHeight="718.0" prefWidth="256.0" style="-fx-background-color: #7156DD;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <tabs>
+                        <Tab closable="false" text="Thêm &amp; Sửa">
+                           <content>
+                              <AnchorPane>
+                                 <children>
+                                    <TilePane alignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                       <children>
+                                            <Pane prefHeight="210.0" prefWidth="256.0" style="-fx-background-color: #7156DD;">
+                                                <children>
+                                                    <ImageView fx:id="imvHinhAnhMA" fitHeight="165.0" fitWidth="200.0" layoutX="30.0" layoutY="21.0" onMouseClicked="#chooseImage" pickOnBounds="true" preserveRatio="true">
+                                                        <image>
+                                                            <Image url="@../images/food-view.png" />
+                                                        </image>
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                    </ImageView>
+                                                </children>
+                                            </Pane>
+                                       </children>
+                                    </TilePane>
+                                        <Label layoutX="15.0" layoutY="205.0" prefHeight="23.0" prefWidth="118.0" text="Tên món ăn:" textFill="WHITE">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </Label>
+                                        <TextField fx:id="txtTenMonAn" layoutX="13.0" layoutY="234.0" prefHeight="48.0" prefWidth="204.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="39.0">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </TextField>
+                                    <Label layoutX="15.0" layoutY="291.0" text="Nguyên liệu chính" textFill="WHITE">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                    </Label>
+                                    <TextField layoutX="15.0" layoutY="318.0" prefHeight="48.0" prefWidth="202.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="39.0">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                    </TextField>
+                                        <Label layoutX="21.0" layoutY="371.0" prefHeight="27.0" prefWidth="108.0" text="Mô tả:" textFill="WHITE">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </Label>
+                                        <TextArea fx:id="txtMoTaMA" layoutX="14.0" layoutY="398.0" prefHeight="109.0" prefWidth="235.0" wrapText="true" AnchorPane.bottomAnchor="172.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="398.0">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </TextArea>
+                                        <Label layoutX="20.0" layoutY="520.0" prefHeight="27.0" prefWidth="85.0" text="Số người:" textFill="WHITE" AnchorPane.bottomAnchor="132.0">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </Label>
+                                        <TextField fx:id="txtSoLuongNguoiMA" layoutX="117.0" layoutY="514.0" prefHeight="39.0" prefWidth="68.0" AnchorPane.bottomAnchor="126.0">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </TextField>
+                                        <Label layoutX="21.0" layoutY="570.0" prefHeight="27.0" prefWidth="33.0" text="Giá:" textFill="WHITE" AnchorPane.bottomAnchor="82.0">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </Label>
+                                        <TextField fx:id="txtGiaTienMA" layoutX="64.0" layoutY="564.0" prefHeight="39.0" prefWidth="123.0" AnchorPane.bottomAnchor="76.0">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </TextField>
+                                    <TilePane alignment="CENTER" hgap="10.0" layoutX="20.0" layoutY="618.0" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                       <children>
+                                                            <Button fx:id="btnThemMonAn" mnemonicParsing="false" onAction="#themMonAn" prefHeight="39.0" prefWidth="102.0" style="-fx-background-color: #3F2B63;" text="Thêm" textFill="WHITE">
+                                                                <font>
+                                                                    <Font size="18.0" />
+                                                                </font>
+                                             <graphic>
+                                                                        <FontAwesomeIconView fill="#f8f8f8" glyphName="PLUS" size="23" />
+                                             </graphic>
+                                                            </Button>
+                                          <Button fx:id="btnSuaMonAn" mnemonicParsing="false" onAction="#suaMonAn" prefHeight="39.0" prefWidth="90.0" style="-fx-background-color: #3F2B63;" text="Sửa" textFill="WHITE">
+                                             <font>
+                                                <Font size="18.0" />
+                                             </font>
+                                             <graphic>
+                                                <FontAwesomeIconView fill="#f8f8f8" glyphName="WRENCH" size="23" />
+                                             </graphic>
+                                          </Button>
+                                       </children>
+                                    </TilePane>
+                                 </children>
+                              </AnchorPane>
+                           </content>
+                        </Tab>
+                        <Tab closable="false" text="Tìm kiếm">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                                    <TextField layoutX="15.0" layoutY="65.0" prefHeight="46.0" prefWidth="228.0" style="-fx-border-color: #3156DD;" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="13.0">
+                                                        <font>
+                                                            <Font size="18.0" />
+                                                        </font>
+                                                    </TextField>
+                                    <TextField layoutX="20.0" layoutY="170.0" prefHeight="40.0" prefWidth="75.0" />
+                                    <Label layoutX="20.0" layoutY="30.0" text="Tên hoặc mô tả" textFill="WHITE">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font></Label>
+                                    <TilePane alignment="CENTER" layoutY="298.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                       <children>
+                                          <Button mnemonicParsing="false" style="-fx-background-color: #3F2B63;" text="Tìm kiếm" textFill="WHITE">
+                                             <graphic>
+                                                                <FontAwesomeIconView fill="WHITE" glyphName="SEARCH" size="23" />
+                                             </graphic>
+                                             <font>
+                                                <Font size="18.0" />
+                                             </font>
+                                          </Button>
+                                       </children>
+                                    </TilePane>
+                                    <Label layoutX="20.0" layoutY="140.0" text="Số người" textFill="WHITE">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font></Label>
+                                    <Label layoutX="137.0" layoutY="140.0" text="Giá" textFill="WHITE">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font></Label>
+                                    <TextField layoutX="137.0" layoutY="169.0" prefHeight="41.0" prefWidth="107.0" />
+                                    <CheckBox layoutX="22.0" layoutY="245.0" mnemonicParsing="false" text="Đã hủy" textFill="WHITE">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                    </CheckBox>
+                                 </children></AnchorPane>
+                          </content>
+                        </Tab>
+                     </tabs>
+                  </TabPane>
+               </children>
+            </AnchorPane>
+          <AnchorPane minWidth="512.0" prefHeight="718.0" prefWidth="758.0">
+               <children>
+                  <ScrollPane fitToWidth="true" prefHeight="400.0" prefWidth="973.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <content>
+                        <FlowPane fx:id="dsMonAn" alignment="TOP_CENTER" hgap="10.0" prefHeight="716.0" prefWidth="756.0" vgap="10.0">
+                           <padding>
+                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                           </padding>
+                        </FlowPane>
+                     </content>
+                  </ScrollPane>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
+    </children>
 </AnchorPane>
